# spatial

./: CMakeLists.txt  ChangeLog  INSTALL  README  README.md  TODO
doc/: .gitignore  Doxyfile  README  src_aliases  xref_aliases
doc/images/: favicon.xcf  logo.xcf  spatial_large.xcf  spatial_logo.xcf  spatial_small.xcf
doc/manual/: complexity.dox  concepts.dox  examples.dox  main.dox  user_manual.dox
doc/meta/: complexity.dox  concepts.dox  concepts.hpp  header.html  main.dox  main.hpp
examples/: .gitignore  CMakeLists.txt  README  custom_accessor_less.cpp  get_container_size.cpp  runtime_container_rank.cpp
examples/basic/: runtime_container_rank.cpp
examples/include/: point_type.hpp  random.hpp
examples/performance/: erase_performance.cpp  farthest_neighbor_performance.cpp  find_performance.cpp  insert_performance.cpp  iterate_performance.cpp  lower_bound_neighbor_performance.cpp  mapping_performance.cpp  nearest_neighbor_performance.cpp  neighbor_iterator_performance.cpp  region_performance.cpp  spheric_nearest_performance.cpp  upper_bound_neighbor_performance.cpp
src/: box_multimap.hpp  box_multiset.hpp  boxmap.hpp  boxset.hpp  equal_iterator.hpp  exception.hpp  frozen_boxmap.hpp  frozen_boxset.hpp  frozen_pointmap.hpp  frozen_pointset.hpp  function.hpp  idle_box_multimap.hpp  idle_box_multiset.hpp  idle_boxmap.hpp  idle_boxset.hpp  idle_point_multimap.hpp  idle_point_multiset.hpp  idle_pointmap.hpp  idle_pointset.hpp  mapping_iterator.hpp  metric.hpp  neighbor_iterator.hpp  ordered_iterator.hpp  point_multimap.hpp  point_multiset.hpp  pointmap.hpp  pointset.hpp  region_iterator.hpp  spatial.hpp  traits.hpp
src/bits/: spatial.hpp  spatial_assert.hpp  spatial_assign.hpp  spatial_bidirectional.hpp  spatial_builtin.hpp  spatial_check_concept.hpp  spatial_closed_region.hpp  spatial_compare_builtin.hpp  spatial_compress.hpp  spatial_condition.hpp  spatial_details.hpp  spatial_enclosed_region.hpp  spatial_equal.hpp  spatial_euclidian_neighbor.hpp  spatial_except.hpp  spatial_exceptions.hpp  spatial_function.hpp  spatial_geometry.hpp  spatial_kdtree.hpp  spatial_kdtree.tpp  spatial_kdtree_base.hpp  spatial_kdtree_base.tpp  spatial_manhattan_neighbor.hpp  spatial_mapping.hpp  spatial_mapping.tpp  spatial_math.hpp  spatial_metric.hpp  spatial_mutate.hpp  spatial_neighbor.hpp  spatial_neighbor.tpp  spatial_node.hpp  spatial_node.tpp  spatial_node_mapping.hpp  spatial_open_region.hpp  spatial_ordered.hpp  spatial_ordered.tpp  spatial_preorder.hpp  spatial_pull_tr1.hpp  spatial_quadrance_neighbor.hpp  spatial_range.hpp  (+12 more)
src/spatial/bits/: spatial_kdtree.hpp  spatial_relaxed_kdtree.hpp
tests/: .gitignore  CMakeLists.txt  README  verify.cpp  verify_base.cpp  verify_equal.cpp  verify_mapping.cpp  verify_neighbor.cpp  verify_neighbor_safer.cpp  verify_ordered.cpp  verify_region.cpp
tests/bits/: fixtures.hpp  spatial_test_details.hpp  spatial_test_equal.hpp  spatial_test_exceptions.hpp  spatial_test_fixtures.hpp  spatial_test_function.hpp  spatial_test_geometry.hpp  spatial_test_kdtree.hpp  spatial_test_mapping.hpp  spatial_test_metric.hpp  spatial_test_neighbor.hpp  spatial_test_neighbor_safer.hpp  spatial_test_node.hpp  spatial_test_ordered.hpp  spatial_test_output.hpp  spatial_test_pointset.hpp  spatial_test_range.hpp  spatial_test_region.hpp  spatial_test_relaxed_kdtree.hpp  spatial_test_traits.hpp  spatial_test_types.hpp  test_fixtures.hpp
tests/performance/: CMakeLists.txt  chrono.hpp  equal_performance.cpp  erase_performance.cpp  farthest_neighbor_performance.cpp  find_performance.cpp  insert_performance.cpp  iterate_performance.cpp  lower_bound_neighbor_performance.cpp  mapping_performance.cpp  minmax_mapping_performance.cpp  nearest_neighbor_performance.cpp  neighbor_iterator_performance.cpp  ordered_performance.cpp  random.hpp  region_performance.cpp  spheric_nearest_performance.cpp  test_distribution.cpp  upper_bound_neighbor_performance.cpp
tests/verify/: CMakeLists.txt  spatial_import_array.hpp  spatial_test_details.hpp  spatial_test_exceptions.hpp  spatial_test_fixtures.hpp  spatial_test_mapping.hpp  spatial_test_neighbor.hpp  spatial_test_neighbor_safer.hpp  spatial_test_node.hpp  spatial_test_pointset.hpp  spatial_test_region.hpp  spatial_test_types.hpp  verify.cpp  verify_base.cpp  verify_box_multimap.cpp  verify_box_multiset.cpp  verify_details.cpp  verify_equal.cpp  verify_exception.cpp  verify_function.cpp  verify_idle_box_multimap.cpp  verify_idle_box_multiset.cpp  verify_idle_point_multimap.cpp  verify_idle_point_multiset.cpp  verify_kdtree.cpp  verify_mapping.cpp  verify_metric.cpp  verify_neighbor.cpp  verify_neighbor_safer.cpp  verify_node.cpp  verify_ordered.cpp  verify_point_multimap.cpp  verify_point_multiset.cpp  verify_region.cpp  verify_relaxed_kdtree.cpp  verify_traits.cpp
