cmake_minimum_required (VERSION 2.6)
project (spatial_verify)
if (CMAKE_COMPILER_IS_GNUCXX)
  # Make G++ very pedantic so that code compiled with it will be very portable... hopefully
  set (CMAKE_CXX_FLAGS "-O0 -ggdb -Wall -pedantic-errors -Wextra -Wshadow -Wcast-qual -Wconversion -Wsign-conversion")
endif ()
find_package (Boost COMPONENTS unit_test_framework REQUIRED)
if (Boost_FOUND)
        include_directories(${Boost_INCLUDE_DIRS})
        add_executable (verify verify.cpp)
        if (MSVC)
                set_target_properties (verify PROPERTIES COMPILE_FLAGS "/EHa")
        endif ()
        target_link_libraries(verify ${Boost_LIBRARIES})
endif ()
