cmake_minimum_required (VERSION 2.6)
project (spatial_verify)
if (CMAKE_COMPILER_IS_GNUCXX OR CMAKE_COMPILER_IS_CLANGXX)
  # Make Clang/G++ very pedantic
  set (CMAKE_CXX_FLAGS "-O0 -g -Wall -pedantic-errors -Wextra -Wshadow -Wcast-qual -Wconversion -Wsign-conversion -Wformat")
elseif (MSVC)
  # Set MSVC Warning level to 4
  if (CMAKE_CXX_FLAGS MATCHES "/W[0-4]")
    string(REGEX REPLACE "/W[0-4]" "/W4" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
  else ()
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
  endif ()
endif ()
find_package (Boost COMPONENTS unit_test_framework REQUIRED)
if (Boost_FOUND)
  include_directories(${Boost_INCLUDE_DIRS})
  add_executable (verify verify.cpp verify_base.cpp verify_mapping.cpp verify_region.cpp verify_neighbor.cpp verify_neighbor_safer.cpp verify_ordered.cpp verify_equal.cpp)
  if (MSVC)
    set_target_properties (verify PROPERTIES COMPILE_FLAGS "/EHa")
  endif ()
  target_link_libraries(verify ${Boost_LIBRARIES})
endif ()
